--- a/fetms/package.json
+++ b/fetms/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "aphrodite": "^2.3.1",
     "axios": "^0.18.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dates": "^20.1.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-spinners": "^0.5.4",
     "react-with-styles": "^3.2.1",
     "react-with-styles-interface-aphrodite": "^5.0.1"
   },
